Refactor QueueDomainServiceImpl to improve token management and synchronization